FIX: top bar  spacing

--- a/src/assets/css/tolkits.css
+++ b/src/assets/css/tolkits.css
@@ -6849,6 +6849,10 @@ ul.sport {
   padding-right: 20px;
 }
 @media (max-width: 1090px) {
+    .disable-ipad{
+        margin-top: -12px;
+        font-size: 12px;
+    }
     .market-odds{
         flex-basis: auto;
     }
